Fix alignment of trend icons

--- a/sonar-server/src/main/webapp/stylesheets/style.css
+++ b/sonar-server/src/main/webapp/stylesheets/style.css
@@ -432,7 +432,7 @@ table.data td.small, table.data th.small {
 }
 
 table.data th img, table.data td img {
-  vertical-align: top;
+  vertical-align: sub;
 }
 
 .data thead tr.total {
